--- a/src/components/side_panel/SidePanel.scss
+++ b/src/components/side_panel/SidePanel.scss
@@ -1,11 +1,11 @@
+@import '../../common/stylesheets/CustomAlignment.scss';
 #side-panel {
   background-color: #212121;
   height: 100%;
-  width: 400px;
-  position: absolute;
-  left: 60px;
+  width: 100%;
   display: flex;
   flex-direction: column;
+  user-select: none;
 }
 p,.arrow-down{
   padding: 0px;
