--- a/src/components/core/resizable_element/ResizableComponent.scss
+++ b/src/components/core/resizable_element/ResizableComponent.scss
@@ -1,21 +1,21 @@
-@import'../../../common/stylesheets/core.scss';
-@import'../../../common/stylesheets/ButtonHover.scss';
-@import '../../../common/stylesheets/CustomAlignment.scss';
+@import'../../../core/stylesheets/core.scss';
+@import'../../../core/stylesheets/ButtonHover.scss';
+@import '../../../core/stylesheets/CustomAlignment.scss';
 
 .resizable {
     height: 100%;
+    width: 100%;
+    flex-shrink: 0;
     @include row();
-    @include AlingAfterSideBar();
 }
 
 #dragger {
-    width: 3px;
+    width: $resizable-drager-width;
     height: 100%;
-    z-index: 1;
+    background-color: #212121;
     @include hoverStyle(#0776c7);
-    position: absolute;
-    right: 0;
     &:hover {
         cursor: w-resize;
     }
+    align-self: flex-end;
 }
