--- a/src/pages/DashBoard/componets/editors_view_holder/EditorsViewHolder.css
+++ b/src/pages/DashBoard/componets/editors_view_holder/EditorsViewHolder.css
@@ -1,14 +1,17 @@
 #pages-wrapper {
   height: 100%;
+  width: 100%;
   background-color: #1b1b1b;
   display: flex;
   flex-direction: column;
+  overflow: auto;
+  min-width: 0px;
 }
 
 .opened-page-holder {
   height: 100%;
+  width: 100%;
   background-color: #1b1b1b;
   display: flex;
-  flex-direction: row;
   overflow: auto;
 }
