--- a/src/components/side_bar/SideBar.scss
+++ b/src/components/side_bar/SideBar.scss
@@ -1,5 +1,7 @@
 #side-bar {
   height: 100%;
-  position: absolute;
-  left: 0px;
+  flex-shrink: 0;
+  padding-top: 15px;
+  display: flex;
+  flex-direction: column;
 }
