--- a/src/pages/DashBoard/componets/editor_page/EditorPage.css
+++ b/src/pages/DashBoard/componets/editor_page/EditorPage.css
@@ -1,8 +1,8 @@
 #opened-page {
     min-width: 400px;
     width: 100%;
-    flex-shrink: 0;
     height: 100%;
+    flex-grow: 1;
     background-color: #1b1b1b;
-    /* border: solid; */
+    border: solid;
   }
