--- a/src/pages/DashBoard/componets/editor_title_card_holding_component/EditorTitleCardHoldingComponent.scss
+++ b/src/pages/DashBoard/componets/editor_title_card_holding_component/EditorTitleCardHoldingComponent.scss
@@ -1,10 +1,11 @@
 #opened-pages-title-card-holder {
-    width: 100%;
-    height: 30px;
-    background-color: #212121;
-    display: flex;
-    flex-direction: row;
-    overflow: auto;
+  height: 30px;
+  width: 100%;
+  background-color: #212121;
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
+  overflow: auto;
   }
 
   ::-webkit-scrollbar {
