--- a/src/pages/Dashboard.css
+++ b/src/pages/Dashboard.css
@@ -1,18 +1,15 @@
 #dashboard {
-  width: 100vw;
+  /* width: 100vw; */
   height: 100vh;
   background-color: #161616;
   display: flex;
-  flex-direction: row;
   flex-direction: column;
-  justify-content: space-between;
 }
 
 #view-holder {
+  width: 100%;
+  height: 100%;
+  background-color: #1b1b1b;
   display: flex;
   flex-direction: row;
-  background-color: #1b1b1b;
-  height: 100%;
-  position: relative;
-  justify-content: end;
 }
