app theme base done

--- a/src/components/bottom_bar/BottomBar.css
+++ b/src/components/bottom_bar/BottomBar.css
@@ -1,5 +1,5 @@
 #bottom-bar {
-  background-color: #0776c7;
+  background-color: var(--bottom-bar-bg);
   height: 20px;
   border-radius: 0px 0px 10px 10px;
 }
