--- a/src/components/side_bar/SideBar.scss
+++ b/src/components/side_bar/SideBar.scss
@@ -1,7 +1,11 @@
 #side-bar {
   height: 100%;
   flex-shrink: 0;
-  padding-top: 15px;
   display: flex;
   flex-direction: column;
+  background-color: var(--side-bar-bg);
+}
+.side-bar-button{
+  padding: 10px;
+  border-left: solid var(--bottom-bar-bg);
 }
