--- a/src/components/side_panel/SidePanel.scss
+++ b/src/components/side_panel/SidePanel.scss
@@ -1,7 +1,7 @@
 @import '../../core/stylesheets/CustomAlignment.scss';
 
 #side-panel {
-  background-color: #212121;
+  background-color: var(--side-panel-bg);
   height: 100%;
   width: 100%;
   display: flex;
