--- a/src/pages/DashBoard/componets/editors_view_holder/EditorsViewHolder.css
+++ b/src/pages/DashBoard/componets/editors_view_holder/EditorsViewHolder.css
@@ -1,7 +1,7 @@
 #pages-wrapper {
   height: 100%;
   width: 100%;
-  background-color: #1b1b1b;
+  background-color: var(--editor-bg);
   display: flex;
   flex-direction: column;
   overflow: auto;
@@ -11,7 +11,7 @@
 .opened-page-holder {
   height: 100%;
   width: 100%;
-  background-color: #1b1b1b;
+  background-color: var(--editor-bg);
   display: flex;
   overflow: auto;
 }
