--- a/src/pages/Dashboard.css
+++ b/src/pages/Dashboard.css
@@ -1,7 +1,6 @@
 #dashboard {
-  /* width: 100vw; */
   height: 100vh;
-  background-color: #161616;
+  background-color: var(--root-bg);
   display: flex;
   flex-direction: column;
 }
@@ -9,7 +8,7 @@
 #view-holder {
   width: 100%;
   height: 100%;
-  background-color: #1b1b1b;
+  background-color: var(--editor-bg);
   display: flex;
   flex-direction: row;
 }
