--- a/src/components/bottom_bar/BottomBar.css
+++ b/src/components/bottom_bar/BottomBar.css
@@ -1,5 +1,8 @@
 #bottom-bar {
   background-color: var(--bottom-bar-bg);
-  height: 20px;
+  height: var(--bottom-bar-height);
+  width: 100%;
+  flex-shrink: 0;
   border-radius: 0px 0px 10px 10px;
+  z-index: 1;
 }
