--- a/src/components/side_bar/SideBar.scss
+++ b/src/components/side_bar/SideBar.scss
@@ -1,11 +1,30 @@
 #side-bar {
   height: 100%;
+  width: var(--side-bar-width);
   flex-shrink: 0;
   display: flex;
   flex-direction: column;
   background-color: var(--side-bar-bg);
+  overflow-y: auto;
 }
-.side-bar-button{
+#side-bar::-webkit-scrollbar {
+  width: 2px;
+  height: 2px;
+}
+
+#side-bar::-webkit-scrollbar-track {
+  background: var(--editor-bg);
+}
+
+#side-bar::-webkit-scrollbar-thumb {
+  background: var(--scroll-bar-bg);
+}
+#side-bar::-webkit-scrollbar-corner{
+  background: var(--scroll-bar-bg);
+}
+
+.side-bar-button {
   padding: 10px;
   border-left: solid var(--bottom-bar-bg);
 }
+
