--- a/src/pages/DashBoard/componets/editor_title_card_holding_component/EditorTitleCardHoldingComponent.scss
+++ b/src/pages/DashBoard/componets/editor_title_card_holding_component/EditorTitleCardHoldingComponent.scss
@@ -1,22 +1,26 @@
 #opened-pages-title-card-holder {
   height: 30px;
   width: 100%;
-  background-color: #212121;
+  background-color: var(--side-panel-bg);
   display: flex;
   flex-direction: row;
   list-style-type: none;
   overflow: auto;
-  }
+}
 
-  ::-webkit-scrollbar {
-    width: 2px;
-    height: 2px;
-  }
-  
-  ::-webkit-scrollbar-track {
-    background: #1b1b1b;
-  }
-  
-  ::-webkit-scrollbar-thumb {
-    background: #262626;
-  }
+#opened-pages-title-card-holder::-webkit-scrollbar {
+  width: 2px;
+  height: 2px;
+}
+
+#opened-pages-title-card-holder::-webkit-scrollbar-track {
+  background: var(--editor-bg);
+}
+
+#opened-pages-title-card-holder::-webkit-scrollbar-thumb {
+  background: var(--scroll-bar-bg);
+}
+
+#opened-pages-title-card-holder::-webkit-scrollbar-corner{
+  background: var(--scroll-bar-bg);
+}
